--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="gray_separator">#DDDDDD</color>
+    <color name="white">#FFFFFF</color>
+    <color name="red_calendar">#CF0000</color>
 
 </resources>
