--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#573c35</color>
+    <color name="colorPrimaryDark">#2d160f</color>
+    <color name="colorAccent">#355751</color>
 
     <color name="gray_separator">#DDDDDD</color>
     <color name="white">#FFFFFF</color>
