--- a/app/src/main/res/layout/activity_beer_details.xml
+++ b/app/src/main/res/layout/activity_beer_details.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:collapsedTitleTextAppearance="@style/collapsing_toolbar_text"
+            app:contentScrim="@color/colorPrimary"
             app:expandedTitleTextAppearance="@style/collapsing_toolbar_text"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -25,17 +26,17 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                android:src="@drawable/stout_collapsing"/>
+                android:src="@drawable/stout_collapsing"
+                app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar_details"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                android:elevation="4dp"
                 android:fitsSystemWindows="true"
                 android:minHeight="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                />
+                app:layout_collapseMode="pin" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -46,101 +47,113 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/collapsing_picture"
-        android:padding="8dp"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        >
+        android:padding="4dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_margin="4dp">
 
                 <LinearLayout
-                    android:id="@+id/card_info_header_color"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="#cc4b14"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_margin="8dp"
-                        android:src="@drawable/ic_info_outline_24dp"
-                        />
+                    <LinearLayout
+                        android:id="@+id/card_info_header_color"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@color/colorAccent"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                        <ImageView
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_margin="8dp"
+                            android:src="@drawable/ic_info_outline_24dp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="8dp"
+                            android:text="@string/info_card_title"
+                            android:textColor="@color/white"
+                            android:textSize="18sp" />
+                    </LinearLayout>
+
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_view_infos"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        android:layout_gravity="center_vertical"
-                        android:text="Infos générales"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
+                        android:layout_margin="4dp"
+                        android:orientation="vertical"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
                 </LinearLayout>
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
+            </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <LinearLayout
+            <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_margin="4dp">
 
                 <LinearLayout
-                    android:id="@+id/card_calendar_header_color"
                     android:layout_width="match_parent"
-                    android:layout_height="40dp"
-                    android:background="@color/red_calendar"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/card_header_icon"
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_margin="8dp"
-                        android:src="@drawable/ic_date_range_24dp"
-                        />
+                    <LinearLayout
+                        android:id="@+id/card_calendar_header_color"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:background="@color/red_calendar"
+                        android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/car_header_title"
-                        android:layout_width="wrap_content"
+                        <ImageView
+                            android:id="@+id/card_header_icon"
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_margin="8dp"
+                            android:src="@drawable/ic_date_range_24dp" />
+
+                        <TextView
+                            android:id="@+id/car_header_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_margin="8dp"
+                            android:text="@string/dates_card_title"
+                            android:textColor="@color/white"
+                            android:textSize="18sp" />
+
+
+                    </LinearLayout>
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/recycler_view_dates"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:textColor="@color/white"
-                        android:textSize="18sp"
-                        android:layout_gravity="center_vertical"
-                        android:text="Dates"/>
+                        android:layout_margin="4dp"
+                        android:orientation="vertical"
+                        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+
                 </LinearLayout>
 
-            </LinearLayout>
+            </android.support.v7.widget.CardView>
 
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/beer_details_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/beer_details_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
